--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5",
-        "acaronlex/laravel-calendar": "^1.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.1",
+        "laravel/ui": "2.0",
         "nesbot/carbon": "^2.39",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
